<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="@color/md_theme_secondary"
            tools:text="Lionel Messi" />

        <ImageView
            android:id="@+id/detail_card"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_name"
            tools:src="@drawable/img_messi"
            android:contentDescription="@string/placeholder_card"/>

        <LinearLayout
            android:id="@+id/info_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_card"
            android:divider="@drawable/divider"
            android:showDividers="middle">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginEnd="8dp">

                <TextView
                    android:id="@+id/country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:text="@string/country" />
                <TextView
                    android:id="@+id/detail_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textStyle="bold"
                    android:textColor="@color/md_theme_tertiary"
                    tools:text="Argentina"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginHorizontal="8dp">

                <TextView
                    android:id="@+id/club"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:text="@string/club" />
                <TextView
                    android:id="@+id/detail_club"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textStyle="bold"
                    android:textColor="@color/md_theme_tertiary"
                    tools:text="Inter Miami" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginStart="8dp">

                <TextView
                    android:id="@+id/position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:text="@string/position" />
                <TextView
                    android:id="@+id/detail_position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textStyle="bold"
                    android:textColor="@color/md_theme_tertiary"
                    tools:text="RW" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/detail_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_container"
            tools:text="@string/summary"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/detail_summary"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@color/md_theme_onPrimary"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pace_tag"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detail_pace"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:textStyle="bold"
                        tools:text="@string/pace" />

                    <ProgressBar
                        android:id="@+id/pace_progress"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="0dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:progress="0"
                        android:max="100"
                        android:progressDrawable="@drawable/stats_custom" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shoot_tag"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detail_shoot"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:textStyle="bold"
                        tools:text="@string/pace" />

                    <ProgressBar
                        android:id="@+id/shoot_progress"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="0dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:progress="0"
                        android:max="100"
                        android:progressDrawable="@drawable/stats_custom" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pass_tag"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detail_pass"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:textStyle="bold"
                        tools:text="@string/pace" />

                    <ProgressBar
                        android:id="@+id/pass_progress"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="0dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:progress="0"
                        android:max="100"
                        android:progressDrawable="@drawable/stats_custom" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dribble_tag"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detail_dribble"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:textStyle="bold"
                        tools:text="@string/pace" />

                    <ProgressBar
                        android:id="@+id/dribble_progress"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="0dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:progress="0"
                        android:max="100"
                        android:progressDrawable="@drawable/stats_custom" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/defence_tag"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detail_defence"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:textStyle="bold"
                        tools:text="@string/pace" />

                    <ProgressBar
                        android:id="@+id/defence_progress"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="0dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:progress="0"
                        android:max="100"
                        android:progressDrawable="@drawable/stats_custom" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/physical_tag"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detail_physical"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:textStyle="bold"
                        tools:text="@string/pace" />

                    <ProgressBar
                        android:id="@+id/physical_progress"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="0dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:progress="0"
                        android:max="100"
                        android:progressDrawable="@drawable/stats_custom" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
